[refactor] common compiler phases related to panama segments moved to a common package for all backends